# betterflow-sync

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  build-windows.bat  build-windows.ps1  build.spec  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
installer/: windows-installer.iss
resources/: .gitkeep  icon.icns
scripts/: download_aw.py  generate_icons.py
src/: __init__.py  autostart.py  aw_manager.py  compat.py  config.py  display_info.py  entry_point.py  main.py  notifications.py  reminders.py  screenshots.py  system_events.py  update_checker.py
src/auth/: __init__.py  browser_auth.py  keychain.py  login.py  pkce.py
src/sync/: __init__.py  activity_analyzer.py  aw_client.py  bf_client.py  daily_time_tracker.py  http_client.py  privacy.py  protocols.py  queue.py  retry.py  sync_engine.py
src/ui/: __init__.py  permissions.py  preferences.py  setup_wizard.py  tray.py
tests/: __init__.py  test_activity_analyzer.py  test_aw_client.py  test_bf_client.py  test_browser_auth.py  test_daily_time_tracker.py  test_notifications.py  test_queue.py  test_reminders.py  test_sync_engine.py
